argo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: my-application
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-application
  template:
    metadata:
      labels:
        app: my-application
    spec:
      containers:
      - name: my-application
        image: nginx:1.28.0  # This is your container image version
        ports:
        - containerPort: 8080
  strategy:
    canary:
      canaryService: my-application-canary
      stableService: my-application-stable
      trafficRouting:
        istio:
          virtualService:
            name: my-application-vsvc
            routes:
              - primary
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {}
      - setWeight: 60
      - pause: {}
      - setWeight: 80
      - pause: {}
      - setWeight: 100
      - pause: {}
