argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-application-stable
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-application
    # Will match stable pods
---
apiVersion: v1
kind: Service
metadata:
  name: my-application-canary
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-application
    # Will match canary pods
