argo/vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app-vsvc
spec:
  hosts:
  - sample-app.example.com
  gateways:
  - sample-app-gateway
  http:
  - name: primary
    match:
    - headers:
        x-env:
          exact: canary
    route:
    - destination:
        host: sample-app-canary
        port:
          number: 80
      weight: 0
    - destination:
        host: sample-app-stable
        port:
          number: 80
      weight: 100
